1.0.1*
-----

- Bug fixes
  - #37, Fix access to uninitialized variables
  - #31, Fix crash in pc_patch
  - #28, Fix uninterruptible loop from pc_schemaisvalid
  - #27, Fix pointcloud_columns view definition to handle null-typmoded cols
  - #23, Fix computation of dimensional patch extent 
  - #26, Fix cmake build with GCC 4.8 (-fPIC)

- Enhancements
  - #39, Provide upgrade scripts

1.0.0
-----

Initial release, also known as:
  - 0.1.0 (git tag v0.1.0)
  - 1.0 (extension script filename)
