@@ -2,6 +2,7 @@
 -----
 
 - Bug fixes
+  - #66, Fix crash in pc_schema_clone (unexploitable via SQL)
   - #37, Fix access to uninitialized variables
   - #31, Fix crash in pc_patch
   - #28, Fix uninterruptible loop from pc_schemaisvalid
